Fix timeline spacing

--- a/stylesheets/views/_sections.scss
+++ b/stylesheets/views/_sections.scss
@@ -755,6 +755,7 @@ main > section {
 
 /* <fuckit> */
 .timeline {
+	text-align: center;
 
   $ball-inner-size: 75px;
   $ball-border: $ball-inner-size * 0.125;
